# kali-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  DOCS.md  Dockerfile  README.md  install_check.py  main.py  pyproject.toml  requirements.txt  run_docker.sh  run_tests.sh
docs/: CLAUDE_CODE.md  NMAP.md  VPS_DEPLOYMENT.md
kali_mcp_server/: __init__.py  __main__.py  server.py  tools.py
tests/: __init__.py  test_server.py  test_tools.py
